--- a/main.css
+++ b/main.css
@@ -226,17 +226,13 @@ button {
 .quiz .question .options button.quiz-opt.range:last-of-type {
   margin-right:0;
 }
+@media (hover: hover) {
 .quiz .question .options button.quiz-opt:hover {
   color: #fdca40;
   cursor:pointer;
   transition: all .30s ease;
-}
-
-@media (hover: none) {
-  .quiz .question .options button.quiz-opt {
-  background: none;
-  cursor:pointer;
 }}
+
 /* .quiz .question .options button.quiz-opt:focus {
   background:orange;
   color:#fff;
